--- a/index.html
+++ b/index.html
@@ -1,149 +1,100 @@
+
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>個人網站</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>個人作品集</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-o+RDsa0ILDo3e4eQZXI0yLyG4As3Al6yGyV0+y2Q0ZD61+HrLkFgG5urBLgHaobD" crossorigin="anonymous">
 
-    header,
-    footer {
-      background-color: #343a40;
-      color: white;
-    }
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJaaQ6Am1u1gI1kMdflsY54z3oDQ4T4h/6/jQ=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-v9fqa2xztovIHbgZWlwu5/3+iK7FFy1+4xU1aBki2gyYyaNxFjAPOe7xN6Ex6cXf" crossorigin="anonymous"></script>
 
-    .content {
-      margin: 0 auto;
-      max-width: 1200px;
-    }
-
-    .navbar {
-      margin-bottom: 20px;
-    }
-
-    .card img {
-      display: block;
-      margin: 0 auto;
-    }
-
-    .card-body {
-      text-align: center;
-    }
-
-    .portfolio-section {
-      padding: 50px 0;
-    }
-  </style>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha384-g5Soe52kkzBLKKzF6+WLZIgRTI1PWz3zoDUZ7e99ZakRRS0FsJVfz9zuWSr2nw" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- 導覽列 -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">我的網站</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="切換導航">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#about">關於我</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#experience">經歷</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">作品集</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">聯絡我</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">       
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">關於我</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">作品集</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">經歷</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#activities">活動經歷</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">聯絡我</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-
-  <!-- 首頁區 -->
-  <header class="py-5 text-center">
-    <div class="content">
-      <h1>歡迎來到我的個人網站</h1>
-      <p>探索我的作品、自我介紹與經歷。</p>
-    </div>
+    </nav>
   </header>
 
-  <!-- 自我介紹區 -->
-  <section id="about" class="py-5 bg-light">
-    <div class="content">
-      <h2 class="text-center mb-4">關於我</h2>
-      <div class="row align-items-center">
-        <div class="col-md-4 text-center">
-          <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
-        </div>
-        <div class="col-md-8">
-          <p>您好，我是台灣科技大學企管系的學生。我不僅熱衷於學術研究並多次獲得書卷獎，也積極參與活動籌備與競賽活動。</p>
-        </div>
-      </div>
-    </div>
+  <section id="home">
+    <h1>首頁</h1>
+    <p>歡迎來到我的個人網站！這裡記錄了我的聯絡方式、個人簡介與競賽經歷。</p>
   </section>
 
-  <!-- 經歷區 -->
-  <section id="experience" class="py-5">
-    <div class="content">
-      <h2 class="text-center mb-4">經歷</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>競賽經歷</h3>
-          <ul>
-            <li>第三屆永豐金控校園商業競賽</li>
-            <li>2024 國道智慧交通管理創意競賽優等</li>
-            <li>高中小論文競賽特優 - 振興券影響與滿意度調查</li>
-            <li>商管群中心商概優勝獎</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h3>活動經歷</h3>
-          <ul>
-            <li>籌備112四系聯合宿營</li>
-            <li>籌備113寒假點心營</li>
-          </ul>
-        </div>
-      </div>
+  <section id="about">
+    <h2>個人簡介</h2>
+    <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動</p>
+    <div style="text-align: center;">
+      <img src="attached_assets/20231010_170403.jpg"
+           alt="Personal Photo"
+           class="img-fluid rounded-circle"
+           style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%;">
     </div>
+
   </section>
 
-  <section id="portfolio" class="portfolio-section bg-light">
-  <div class="content">
-    <h2 class="text-center mb-4">作品集</h2>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-      <!-- 作品1 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
-          <div class="card-body">
-            <h5 class="card-title">交通事故分析</h5>
-            <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
-            <a href="project1.html" class="btn btn-primary btn-sm">查看更多</a>
-          </div>
-        </div>
-      </div>
-      <!-- 作品2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="attached_assets/project2.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
-          <div class="card-body">
-            <h5 class="card-title">AI 模型訓練</h5>
-            <p class="card-text">利用 Teachable Machine 訓練自我模型。</p>
-            <a href="https://teachablemachine.withgoogle.com/models/dVT-wr8bi/" target="_blank" class="btn btn-primary btn-sm">查看模型</a>
-          </div>
-        </div>
-      </div>
+  <section id="experience">
+    <h2>競賽經歷</h2>
+    <ul>
+      <li>第三屆永豐金控校園商業競賽</li>
+      <li>2024「時間預測分析與探討」國道智慧交通管理創意競賽優等</li>
+      <li>高中小論文競賽特優 - 產業「振」作，經濟「興」起，政府發行振興券的影響與民眾滿意度調查</li>
+      <li>商管群中心-商概優勝獎</li>
+    </ul>
+  </section>
+
+  <section id="activities">
+    <h2>活動經歷</h2>
+    <ul>
+      <li>籌備112四系聯合宿營</li>
+      <li>籌備113寒假點心營</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>聯絡方式</h2>
+    <p>透過電子郵件聯絡我：B11108037@gapps.ntust.edu.tw</p>
+  </section>
+
+  <section id="portfolio">
+    <h2>我的作品</h2>
+    <div class="portfolio-item">
+      <h3>1、交通事故排除時間預測分析與應用</h3>
+      <p>隊伍名稱為 轟隆隆 隆隆隆隆 衝衝衝衝 拉風。高速公路上每天都有多起交通意外，這些意外不僅影響車輛的正常行駛，還可能造成壅塞。若能預先估算事故排除時間，則有助於縮短行車時間，並避免出現壅塞路段。希望透過本研究的分析及策略能減少受事故影響的行車時間，降低用路人的時間成本。</p>
+      <img src="attached_assets/148092.jpg" alt="交通事故排除時間預測分析與應用" style="width:50%;">
+    </div>
+    <div class="portfolio-item">
+      <h3>2、我自己訓練的模型</h3>
+      <p>利用Google的teachable machine來訓練一個我自己的模型</p>
+      <a href="https://teachablemachine.withgoogle.com/models/dVT-wr8bi/" target="_blank">前往網站</a>
       <!-- 作品3 -->
       <div class="col">
         <div class="card h-100">
