--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -8,32 +7,33 @@
   <title>個人作品集</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-o+RDsa0ILDo3e4eQZXI0yLyG4As3Al6yGyV0+y2Q0ZD61+HrLkFgG5urBLgHaobD" crossorigin="anonymous">
-
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJaaQ6Am1u1gI1kMdflsY54z3oDQ4T4h/6/jQ=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-v9fqa2xztovIHbgZWlwu5/3+iK7FFy1+4xU1aBki2gyYyaNxFjAPOe7xN6Ex6cXf" crossorigin="anonymous"></script>
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha384-g5Soe52kkzBLKKzF6+WLZIgRTI1PWz3zoDUZ7e99ZakRRS0FsJVfz9zuWSr2nw" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
+    <!-- 更新的導覽列 -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">       
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">個人網站</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="切換導航">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#about">關於我</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">作品集</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#experience">經歷</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#activities">活動經歷</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">作品集</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">聯絡我</a>
@@ -43,6 +43,28 @@
       </div>
     </nav>
   </header>
+
+  <!-- 其餘內容保持不變 -->
+  <section id="home">
+    <h1>首頁</h1>
+    <p>歡迎來到我的個人網站！這裡記錄了我的聯絡方式、個人簡介與競賽經歷。</p>
+  </section>
+
+  <section id="about">
+    <h2>個人簡介</h2>
+    <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動</p>
+    <div style="text-align: center;">
+      <img src="attached_assets/20231010_170403.jpg" alt="Personal Photo" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%;">
+    </div>
+  </section>
+
+  <!-- 其餘區塊保持原樣 -->
+  <footer class="py-3 bg-dark text-white text-center">
+    <p>&copy; 2025 我的個人網站</p>
+  </footer>
+</body>
+
+</html>
 
   <section id="home">
     <h1>首頁</h1>
