--- a/index.html
+++ b/index.html
@@ -15,33 +15,29 @@
 <body>
   <header>
     <!-- 更新的導覽列 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">個人網站</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="切換導航">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">關於我</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">經歷</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#activities">活動經歷</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">作品集</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">聯絡我</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<!DOCTYPE html>
+<html lang="zh-TW">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>個人作品集</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet"> <!-- 引入外部 CSS -->
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid justify-content-end">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
+        <li class="nav-item"><a class="nav-link" href="#activities">活動經歷</a></li>
+        <li class="nav-item"><a class="nav-link" href="#portfolio">作品集</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">聯絡我</a></li>
+      </ul>
+    </div>
+  </nav>
   </header>
 
   
