--- a/index.html
+++ b/index.html
@@ -4,77 +4,72 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>個人作品集</title>
-  <meta name="description" content="台灣科技大學企管系學生的個人作品集，展示AI應用、交通分析等專案成果。">
-  <meta name="keywords" content="作品集, AI, 交通分析, 台灣科技大學, 企管系">
-  <meta name="author" content="您的姓名">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="台科大企管學生的個人作品集，展示AI應用、交通預測、模型訓練等專案成果。">
+  <meta name="keywords" content="個人網站, 作品集, 台灣科技大學, AI, 模型, 資料分析">
+  <meta name="author" content="Your Name">
 
   <!-- 外部樣式 -->
   <link href="style.css" rel="stylesheet">
 
-  <!-- Bootstrap 4.3 CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap 5.3 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
   <!-- 導覽列 -->
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-pink sticky-top">
+  <nav class="navbar navbar-expand-md navbar-light bg-primary-custom sticky-top">
+    <div class="container">
       <a class="navbar-brand" href="#">個人網站</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarPink" aria-controls="navbarPink" aria-expanded="false" aria-label="切換導航">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPink">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarPink">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
-          <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">競賽經歷</a></li>
           <li class="nav-item"><a class="nav-link" href="#activities">活動經歷</a></li>
           <li class="nav-item"><a class="nav-link" href="#portfolio">作品集</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">聯絡我</a></li>
         </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
 
-  <main>
-    <!-- 個人簡介 -->
-    <section id="about" class="py-5">
-      <div class="container">
-        <h2 class="text-center mb-4">個人簡介</h2>
-        <div class="row align-items-center">
-          <div class="col-md-4 text-center">
-            <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle">
-          </div>
-          <div class="col-md-8">
-            <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動。</p>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!-- 個人簡介 -->
+  <section id="about" class="py-5">
+    <div class="container text-center">
+      <h2>個人簡介</h2>
+      <p>我是台灣科技大學企業管理系的學生，擁有數據分析與AI應用的經驗，獲得多項書卷獎與競賽肯定。</p>
+      <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle">
+    </div>
+  </section>
 
-    <!-- 經歷 -->
-    <section id="experience" class="py-5 bg-light">
-      <div class="container">
-        <h2 class="text-center mb-4">競賽經歷</h2>
-        <ul>
-          <li>第三屆永豐金控校園商業競賽</li>
-          <li>2024「時間預測分析與探討」國道智慧交通管理創意競賽優等</li>
-          <li>高中小論文競賽特優 - 產業「振」作，經濟「興」起，政府發行振興券的影響與民眾滿意度調查</li>
-          <li>商管群中心-商概優勝獎</li>
-        </ul>
-      </div>
-    </section>
+  <!-- 競賽經歷 -->
+  <section id="experience" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">競賽經歷</h2>
+      <ul class="ps-4">
+        <li>第三屆永豐金控校園商業競賽</li>
+        <li>2024「時間預測分析與探討」國道智慧交通管理創意競賽優等</li>
+        <li>高中小論文競賽特優：政府振興券政策滿意度調查</li>
+        <li>商管群中心-商概優勝獎</li>
+      </ul>
+    </div>
+  </section>
 
-    <!-- 活動經歷 -->
-    <section id="activities" class="py-5">
-      <div class="container">
-        <h2 class="text-center mb-4">活動經歷</h2>
-        <ul>
-          <li>籌備112四系聯合宿營</li>
-          <li>籌備113寒假點心營</li>
-        </ul>
-      </div>
-    </section>
+  <!-- 活動經歷 -->
+  <section id="activities" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">活動經歷</h2>
+      <ul class="ps-4">
+        <li>籌備112四系聯合宿營</li>
+        <li>籌備113寒假點心營</li>
+      </ul>
+    </div>
+  </section>
 
     <!-- 作品集 -->
     <section id="portfolio" class="py-5 bg-light">
@@ -107,7 +102,7 @@
           <!-- 作品 3 -->
           <div class="col-md-6 col-lg-4 mb-4">
             <article class="card h-100 portfolio-card">
-              <img src="attached_assets/project3.jpg" class="card-img-top" alt="智慧交通系統">
+              <img src="attached_assets/148092.jpg" class="card-img-top" alt="交通事故分析">
               <div class="card-body">
                 <h5 class="card-title">智慧交通系統</h5>
                 <p class="card-text">此系統整合交通資料視覺化與智慧判斷，幫助交通單位即時反應事故與擁塞。</p>
@@ -152,19 +147,22 @@
       </div>
     </section>
 
-    <!-- 聯絡我 -->
-    <section id="contact" class="py-5">
-      <div class="container">
-        <h2 class="text-center mb-4">聯絡我</h2>
-        <p class="text-center">您可以通過以下方式聯繫我：</p>
-        <div class="text-center">
-          <p>Email: B11108037@gapps.ntust.edu.tw</p>
-          <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">我的 LinkedIn</a></p>
-        </div>
-      </div>
+
+
+<!-- 聯絡我 -->
+  <section id="contact" class="py-5">
+    <div class="container text-center">
+      <h2 class="mb-4">聯絡我</h2>
+      <p>Email: B11108037@gapps.ntust.edu.tw</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">我的 LinkedIn</a></p>
+    </div>
   </section>
 
-
-  <footer class="text-center py-3 bg-pink text-white">
+  <footer class="text-center py-3 bg-primary-custom text-white">
     &copy; 2025 我的個人網站
   </footer>
+
+  <!-- Bootstrap 5.3 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-HoA+eWsmX9e8+yQlT3fW+iIkpNrx51VmHwM43Z6zTK7CuQ3RrPH5gJPAwqvNv68h" crossorigin="anonymous"></script>
+</body>
+</html>
